# HyLightning_template

./: .pre-commit-config.yaml  README.md  environment.yaml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: code-quality-main.yaml  test.yml
src/: basics_instantiation.py  train.py
src/utils/: __init__.py  template_utils.py
