[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "A-Cool-Project"
version = "0.0.1"
description = "Describe Your Cool Project"
authors = [{name = "John Doe", email = "john.doe@gmail.com"}]
requires-python = ">=3.11"
dependencies = [
    # --------- pytorch --------- #
    # torch and torchvision are NOT listed here intentionally.
    # When using conda (recommended), they are installed via environment.yaml from the
    # pytorch conda channel, which automatically selects the right CUDA version.
    # For pure pip installs, install torch manually first:
    #   pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118
    # See https://pytorch.org/get-started/locally/ for other CUDA versions / OS.
    "torchgeo>=0.5.2",
    "lightning>=2.0.0",
    "torchmetrics>=0.11.4",
    # --------- hydra --------- #
    "hydra-core==1.3.2",
    "hydra-colorlog==1.2.0",
    "hydra-optuna-sweeper==1.2.0",
    "hydra-submitit-launcher==1.2.0",
    # --------- loggers --------- #
    "wandb",
    "wandb_osh",
    # --------- others --------- #
    "rootutils",
    "pre-commit",
    "rich",
    "pytest",
    "sh",  # for running bash commands in some tests (linux/macos only)
]

[project.urls]
Homepage = "https://github.com/user/project"

[project.scripts]
train_command = "src.train:main"
eval_command = "src.eval:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
  "--doctest-modules",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli = "True"
markers = [
  "slow: slow tests",
]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]
